--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   color: black;
 }
 
-.text-secondary {
+.text-failure {
   display: block;
   font-weight: 600;
   margin-top: 20px;
@@ -166,7 +166,7 @@ section {
   color: #151414;
 }
 
-.section-desc {
+.section-description {
   font-size: 18px;
   line-height: 30px;
   color: #444343;
@@ -197,14 +197,14 @@ section {
   text-align: center;
 }
 
-.plan-title {
+.plan-tittle {
   font-size: 30px;
   font-weight: 700;
   color: #151414;
   margin: 20px 0 15px;
 }
 
-.plan-desc {
+.plan-description {
   font-size: 25px;
   font-weight: 500;
   text-align: center;
