--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ section {
   font-size: 30px;
 }
 
-.blog-title {
+.blog-tittle {
   margin: 20px 0 30px;
   font-family: "Lobster", cursive;
   font-size: 30px;
