--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ section {
 .avoid-container {
   margin-top: 50px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 50px;
 }
@@ -228,7 +228,7 @@ section {
 
 .avoid-tittle {
   margin: 20px 0 30px;
-  font-family: "Lobster", cursive;
+  font-family: cursive;
   font-size: 30px;
   font-weight: 600;
 }
@@ -236,7 +236,7 @@ section {
 .items-container {
   width: 400px;
   padding: 50px 20px;
-  text-align: left;
+  text-align: justify;
   background-color: #f5446d;
   border-radius: 5px;
   transition: 0.3s;
